<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/masukkan_no_telp"
        android:imeOptions="actionNext"
        android:layout_toLeftOf="@+id/spinner_label"
        android:layout_toStartOf="@+id/spinner_label" />
    <Spinner
        android:id="@+id/spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button_show"
        android:layout_toStartOf="@id/button_show" />
    <Button
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:onClick="showText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:orientation="vertical"
        android:layout_below="@+id/edit_input"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_p1"
            android:text="@string/pilihan_1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_p2"
        android:text="@string/pilihan_2"
        android:onClick="onRadioButtonClicked"/>
        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_p3"
        android:text="@string/pilihan_3"
        android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_marginTop="12dp"
        android:text="@string/alert"
        android:onClick="showAlert"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPhone"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>